RESOLVED FIXED100573
[EFL][WK2][AC] Viewport size does not change when the window size changes
https://bugs.webkit.org/show_bug.cgi?id=100573
Summary [EFL][WK2][AC] Viewport size does not change when the window size changes
Yael
Reported 2012-10-26 16:28:20 PDT
Resizing the MiniBrowser window does not affect the size of the texture we draw into. The newly exposed area remains black.
Attachments
Patch (1.47 KB, patch)
2012-10-27 15:44 PDT, Yael
kenneth: review+
Patch for landing. (1.49 KB, patch)
2012-10-27 19:07 PDT, Yael
no flags
Yael
Comment 1 2012-10-26 19:43:43 PDT
In EFL port, we create a new surface when the size changes. I did not find an API that allows resizing the surface instead. Looks like TextureMapperGL is caching the first surface that we create and it does not update after the size change. Calling exitAcceleratedCompositingMode and enterAcceleratedCompositingMode fix this problem by deleting and creating a new TextureMapperGL, but this is not optimal solution.
Yael
Comment 2 2012-10-27 15:33:20 PDT
Changing the title, since it is the viewport size that does not change after changing the size of a window.
Yael
Comment 3 2012-10-27 15:44:32 PDT
Created attachment 171108 [details] Patch The viewport size is set when we create the window the first time and does not change automatically afterwards. When we change the window size, we need to explicitly change the viewport size as well.
Kenneth Rohde Christiansen
Comment 4 2012-10-27 15:48:37 PDT
Comment on attachment 171108 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=171108&action=review > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:742 > + Evas_GL_API *gl = evas_gl_api_get(evasGl()); * position i wrong
WebKit Review Bot
Comment 5 2012-10-27 15:50:22 PDT
Attachment 171108 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:742: Declaration has space between type name and * in Evas_GL_API *gl [whitespace/declaration] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 6 2012-10-27 18:34:05 PDT
Comment on attachment 171108 [details] Patch Rejecting attachment 171108 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: uto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix AVFoundation build. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 154. Full output: http://queues.webkit.org/results/14615619
Yael
Comment 7 2012-10-27 18:39:41 PDT
Comment on attachment 171108 [details] Patch Looks like commit queue is sick. Let's try again.
Yael
Comment 8 2012-10-27 19:07:49 PDT
Created attachment 171113 [details] Patch for landing. Fixed the style issue.
WebKit Review Bot
Comment 9 2012-10-28 05:31:21 PDT
Comment on attachment 171113 [details] Patch for landing. Clearing flags on attachment: 171113 Committed r132751: <http://trac.webkit.org/changeset/132751>
WebKit Review Bot
Comment 10 2012-10-28 05:31:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.