[EFL][WK2][AC] Viewport size does not change when the window size changes https://bugs.webkit.org/show_bug.cgi?id=100573

Patch by Yael Aharon <yael.aharon@intel.com> on 2012-10-28
Reviewed by Kenneth Rohde Christiansen.

The viewport size is set when we create the window the first time
and does not change automatically afterwards. When we change the window size,
we need to explicitly change the viewport size as well.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::createGLSurface):

Canonical link: https://commits.webkit.org/118654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132751 268f45cc-cd09-0410-ab3c-d52691b4dbfc